# HealthCost-AI-Copilot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
docs/: AGENTS.md  ARCHITECTURE.md  DOCKER.md  ROADMAP.md  SETUP.md
src/: main.py
src/agents/: __init__.py  base.py  context.py  contract_analyst_agent.py  cost_insights_agent.py  cost_tools.py  execution_logger.py  negotiation_advisor_agent.py  negotiation_tools.py  orchestrator_agent.py  retrieval_agent.py  search_tools.py  tools.py
src/api/: health.py
src/config/: logging.py  settings.py
src/ingestion/: __init__.py  chunker.py  contract_processor.py  cost_processor.py  pdf_extractor.py
src/models/: __init__.py  agents.py  chat.py  chunks.py  clients.py  conversations.py  costs.py  documents.py  search.py
src/search/: __init__.py  embedding_service.py  indexer.py  search_index.py  search_service.py
src/services/: __init__.py  client_service.py  conversation_service.py  conversation_summarizer.py
src/static/: index.html
src/storage/: __init__.py  blob_storage.py  cosmos_db.py
tests/: conftest.py  test_agents_framework.py  test_chat.py  test_contract_analyst_agent.py  test_conversation_context.py  test_conversations.py  test_cost_insights_agent.py  test_cost_processor.py  test_health.py  test_negotiation_advisor_agent.py  test_orchestrator_agent.py  test_response_formatter.py  test_retrieval_agent.py  test_search.py  test_search_service.py  test_settings.py  test_source_fixes.py
(+21 files in other folders)
